@@ -4,17 +4,19 @@ package ca.uhn.fhir.jpa.starter;
 import ca.uhn.fhir.context.FhirVersionEnum;
 import ca.uhn.fhir.jpa.api.config.JpaStorageSettings.ClientIdStrategyEnum;
 import ca.uhn.fhir.jpa.model.entity.NormalizedQuantitySearchLevel;
+import ca.uhn.fhir.jpa.packages.PackageInstallationSpec;
 import ca.uhn.fhir.rest.api.EncodingEnum;
-import com.google.common.collect.ImmutableList;
 import org.hl7.fhir.r4.model.Bundle;
 import org.springframework.boot.context.properties.ConfigurationProperties;
 import org.springframework.boot.context.properties.EnableConfigurationProperties;
 import org.springframework.context.annotation.Configuration;
 
 import java.util.ArrayList;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.Set;
 
 @ConfigurationProperties(prefix = "hapi.fhir")
 @Configuration
@@ -33,6 +35,7 @@ public class AppProperties {
   private Boolean allow_multiple_delete = false;
   private Boolean allow_override_default_search_params = true;
   private Boolean auto_create_placeholder_reference_targets = false;
+  private final Set<String> auto_version_reference_at_paths = new HashSet<>();
   private Boolean dao_scheduling_enabled = true;
   private Boolean delete_expunge_enabled = false;
   private Boolean enable_index_missing_fields = false;
@@ -75,9 +78,11 @@ public class AppProperties {
   private Partitioning partitioning = null;
   private Boolean install_transitive_ig_dependencies = true;
   private Boolean reload_existing_implementationguides = false;
-  private Map<String, ImplementationGuide> implementationGuides = null;
+  private Map<String, PackageInstallationSpec> implementationGuides = null;
 
-	private String staticLocation = null;
+  private String staticLocation = null;
+
+  private String staticLocationPrefix = "/static";
 
   private Boolean lastn_enabled = false;
   private boolean store_resource_in_lucene_index_enabled = false;
@@ -88,33 +93,39 @@ public class AppProperties {
 
   private Integer bundle_batch_pool_size = 20;
   private Integer bundle_batch_pool_max_size = 100;
-  private final List<String> local_base_urls = new ArrayList<>();
+  private final Set<String> local_base_urls = new HashSet<>();
 
   private final List<String> custom_interceptor_classes = new ArrayList<>();
+
+  public String getStaticLocationPrefix() {
+    return staticLocationPrefix;
+  }
+
+  public void setStaticLocationPrefix(String staticLocationPrefix) {
+    this.staticLocationPrefix = staticLocationPrefix;
+  }
 
   public List<String> getCustomInterceptorClasses() {
     return custom_interceptor_classes;
   }
 
+  public String getStaticLocation() {
+    return staticLocation;
+  }
 
-	public String getStaticLocation() {
-		return staticLocation;
-	}
+  public void setStaticLocation(String staticLocation) {
+    this.staticLocation = staticLocation;
+  }
 
-	public void setStaticLocation(String staticLocation) {
-		this.staticLocation = staticLocation;
-	}
+  public Boolean getOpenapi_enabled() {
+    return openapi_enabled;
+  }
 
+  public void setOpenapi_enabled(Boolean openapi_enabled) {
+    this.openapi_enabled = openapi_enabled;
+  }
 
-	public Boolean getOpenapi_enabled() {
-		return openapi_enabled;
-	}
-
-	public void setOpenapi_enabled(Boolean openapi_enabled) {
-		this.openapi_enabled = openapi_enabled;
-	}
-
-	public Boolean getUse_apache_address_strategy() {
+  public Boolean getUse_apache_address_strategy() {
     return use_apache_address_strategy;
   }
 
@@ -138,11 +149,11 @@ public class AppProperties {
     this.defer_indexing_for_codesystems_of_size = defer_indexing_for_codesystems_of_size;
   }
 
-  public Map<String, ImplementationGuide> getImplementationGuides() {
+  public Map<String, PackageInstallationSpec> getImplementationGuides() {
     return implementationGuides;
   }
 
-  public void setImplementationGuides(Map<String, ImplementationGuide> implementationGuides) {
+  public void setImplementationGuides(Map<String, PackageInstallationSpec> implementationGuides) {
     this.implementationGuides = implementationGuides;
   }
 
@@ -163,11 +174,11 @@ public class AppProperties {
   }
 
   public Boolean getIps_enabled() {
-	return ips_enabled;
+  return ips_enabled;
  }
 
  public void setIps_enabled(Boolean ips_enabled) {
-	this.ips_enabled = ips_enabled;
+  this.ips_enabled = ips_enabled;
  }
 
 
@@ -259,7 +270,7 @@ public class AppProperties {
     this.smart = smart;
   }
 
-	public Logger getLogger() {
+  public Logger getLogger() {
     return logger;
   }
 
@@ -276,15 +287,15 @@ public class AppProperties {
     this.client_id_strategy = client_id_strategy;
   }
 
-	public boolean getAdvanced_lucene_indexing() {
-		return this.advanced_lucene_indexing;
-	}
+  public boolean getAdvanced_lucene_indexing() {
+    return this.advanced_lucene_indexing;
+  }
 
-	public void setAdvanced_lucene_indexing(boolean theAdvanced_lucene_indexing) {
-		advanced_lucene_indexing = theAdvanced_lucene_indexing;
-	}
+  public void setAdvanced_lucene_indexing(boolean theAdvanced_lucene_indexing) {
+    advanced_lucene_indexing = theAdvanced_lucene_indexing;
+  }
 
-	public Boolean getAllow_cascading_deletes() {
+  public Boolean getAllow_cascading_deletes() {
     return allow_cascading_deletes;
   }
 
@@ -334,6 +345,10 @@ public class AppProperties {
     this.auto_create_placeholder_reference_targets = auto_create_placeholder_reference_targets;
   }
 
+  public Set<String> getAuto_version_reference_at_paths() {
+    return auto_version_reference_at_paths;
+  }
+
   public Integer getDefault_page_size() {
     return default_page_size;
   }
@@ -366,23 +381,23 @@ public class AppProperties {
     this.enable_index_missing_fields = enable_index_missing_fields;
   }
 
-	public Boolean getEnable_index_contained_resource() {
-		return enable_index_contained_resource;
-	}
+  public Boolean getEnable_index_contained_resource() {
+    return enable_index_contained_resource;
+  }
 
-	public void setEnable_index_contained_resource(Boolean enable_index_contained_resource) {
-		this.enable_index_contained_resource = enable_index_contained_resource;
-	}
+  public void setEnable_index_contained_resource(Boolean enable_index_contained_resource) {
+    this.enable_index_contained_resource = enable_index_contained_resource;
+  }
 
-	public Boolean getEnable_repository_validating_interceptor() {
-		return enable_repository_validating_interceptor;
-	}
+  public Boolean getEnable_repository_validating_interceptor() {
+    return enable_repository_validating_interceptor;
+  }
 
-	public void setEnable_repository_validating_interceptor(Boolean theEnable_repository_validating_interceptor) {
-		enable_repository_validating_interceptor = theEnable_repository_validating_interceptor;
-	}
+  public void setEnable_repository_validating_interceptor(Boolean theEnable_repository_validating_interceptor) {
+    enable_repository_validating_interceptor = theEnable_repository_validating_interceptor;
+  }
 
-	public Boolean getEnforce_referential_integrity_on_delete() {
+  public Boolean getEnforce_referential_integrity_on_delete() {
     return enforce_referential_integrity_on_delete;
   }
 
@@ -448,15 +463,15 @@ public class AppProperties {
     this.binary_storage_enabled = binary_storage_enabled;
   }
 
-	public Integer getInline_resource_storage_below_size() {
-		return inline_resource_storage_below_size;
-	}
+  public Integer getInline_resource_storage_below_size() {
+    return inline_resource_storage_below_size;
+  }
 
-	public void setInline_resource_storage_below_size(Integer inline_resource_storage_below_size) {
-		this.inline_resource_storage_below_size = inline_resource_storage_below_size;
-	}
+  public void setInline_resource_storage_below_size(Integer inline_resource_storage_below_size) {
+    this.inline_resource_storage_below_size = inline_resource_storage_below_size;
+  }
 
-	public Boolean getBulk_export_enabled() {
+  public Boolean getBulk_export_enabled() {
     return bulk_export_enabled;
   }
 
@@ -550,61 +565,61 @@ public class AppProperties {
     this.lastn_enabled = lastn_enabled;
   }
 
-	public boolean getStore_resource_in_lucene_index_enabled() {
-		return store_resource_in_lucene_index_enabled;
-	}
+  public boolean getStore_resource_in_lucene_index_enabled() {
+    return store_resource_in_lucene_index_enabled;
+  }
 
-	public void setStore_resource_in_lucene_index_enabled(Boolean store_resource_in_lucene_index_enabled) {
-		this.store_resource_in_lucene_index_enabled = store_resource_in_lucene_index_enabled;
-	}
+  public void setStore_resource_in_lucene_index_enabled(Boolean store_resource_in_lucene_index_enabled) {
+    this.store_resource_in_lucene_index_enabled = store_resource_in_lucene_index_enabled;
+  }
 
-	public NormalizedQuantitySearchLevel getNormalized_quantity_search_level() {
-	return this.normalized_quantity_search_level;
+  public NormalizedQuantitySearchLevel getNormalized_quantity_search_level() {
+  return this.normalized_quantity_search_level;
   }
 
   public void setNormalized_quantity_search_level(NormalizedQuantitySearchLevel normalized_quantity_search_level) {
-	this.normalized_quantity_search_level = normalized_quantity_search_level;
+  this.normalized_quantity_search_level = normalized_quantity_search_level;
   }
 
-	public boolean getInstall_transitive_ig_dependencies() {
-		return install_transitive_ig_dependencies;
-	}
+  public boolean getInstall_transitive_ig_dependencies() {
+    return install_transitive_ig_dependencies;
+  }
 
-	public void setInstall_transitive_ig_dependencies(boolean install_transitive_ig_dependencies) {
-		this.install_transitive_ig_dependencies = install_transitive_ig_dependencies;
-	}
+  public void setInstall_transitive_ig_dependencies(boolean install_transitive_ig_dependencies) {
+    this.install_transitive_ig_dependencies = install_transitive_ig_dependencies;
+  }
 
-	public boolean getReload_existing_implementationguides() {
-		return reload_existing_implementationguides;
-	}
+  public boolean getReload_existing_implementationguides() {
+    return reload_existing_implementationguides;
+  }
 
-	public void setReload_existing_implementationguides(boolean reload_existing_implementationguides) {
-		this.reload_existing_implementationguides = reload_existing_implementationguides;
-	}
+  public void setReload_existing_implementationguides(boolean reload_existing_implementationguides) {
+    this.reload_existing_implementationguides = reload_existing_implementationguides;
+  }
 
-	public Integer getBundle_batch_pool_size() {
-		return this.bundle_batch_pool_size;
-	}
+  public Integer getBundle_batch_pool_size() {
+    return this.bundle_batch_pool_size;
+  }
 
-	public void setBundle_batch_pool_size(Integer bundle_batch_pool_size) {
-		this.bundle_batch_pool_size = bundle_batch_pool_size;
-	}
+  public void setBundle_batch_pool_size(Integer bundle_batch_pool_size) {
+    this.bundle_batch_pool_size = bundle_batch_pool_size;
+  }
 
-	public Integer getBundle_batch_pool_max_size() {
-		return bundle_batch_pool_max_size;
-	}
+  public Integer getBundle_batch_pool_max_size() {
+    return bundle_batch_pool_max_size;
+  }
 
-	public void setBundle_batch_pool_max_size(Integer bundle_batch_pool_max_size) {
-		this.bundle_batch_pool_max_size = bundle_batch_pool_max_size;
-	}
+  public void setBundle_batch_pool_max_size(Integer bundle_batch_pool_max_size) {
+    this.bundle_batch_pool_max_size = bundle_batch_pool_max_size;
+  }
 
-	public List<String> getLocal_base_urls() {
-		return local_base_urls;
-	}
+  public Set<String> getLocal_base_urls() {
+    return local_base_urls;
+  }
 
 	public static class Cors {
     private Boolean allow_Credentials = true;
-    private List<String> allowed_origin = ImmutableList.of("*");
+    private List<String> allowed_origin = List.of("*");
 
     public List<String> getAllowed_origin() {
       return allowed_origin;
@@ -856,36 +871,6 @@ public class AppProperties {
     }
   }
 
-  public static class ImplementationGuide
-  {
-    private String url;
-    private String name;
-    private String version;
-
-    public String getUrl() {
-      return url;
-    }
-
-    public void setUrl(String url) {
-      this.url = url;
-    }
-
-    public String getName() {
-      return name;
-    }
-
-    public void setName(String name) {
-      this.name = name;
-    }
-
-    public String getVersion() {
-      return version;
-    }
-
-    public void setVersion(String version) {
-      this.version = version;
-    }
-  }
 
   public static class Validation {
 
